// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssayPropertiesInput default properties 1`] = `
<div
  className="margin-top row"
>
  <div
    className="col-lg-4 col-xs-3"
  >
    Test 
    <span
      className="domain-no-wrap"
    >
      Property
      
    </span>
  </div>
  <div
    className="col-lg-8 col-xs-9"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`AssayPropertiesInput with custom props 1`] = `
<div
  className="margin-top row"
>
  <div
    className="col-lg-4 col-xs-3"
  >
    Test 
    <span
      className="domain-no-wrap"
    >
      Property
      <span
        className="label-help-target"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <span
          className="label-help-icon fa fa-question-circle"
        />
      </span>
       *
    </span>
  </div>
  <div
    className="col-lg-8 col-xs-5"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
    />
  </div>
</div>
`;
